--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                     <a href="#contact">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="https://drive.google.com/file/d/1DyZFlBHXPQ5d5Dl-jJfJngelGj8KKef9/view?usp=sharing">
+                        Resume
+                    </a>
                 </li>
             </ul>
         </nav>
