--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class='col-12'>
         <h1>
-            <span>Rose's Profolio</span>
+            <span>Rose's Portfolio</span>
         </h1>
         <nav aria-label="breadcrumb">
             <ul>
@@ -44,13 +44,10 @@
         <article id="about-me" class="my-intro">
             <h3>About Me</h3>
             <p>
-                I am a student at Georgia Tech Bootcamp and just start my journey to become a Web Developer. Even I am
-                just at the entry-level of a web developer, I always like to challenge myself and work on the unfamiliar
-                projects. I have experience and been known for work well in both group and solo projects.
+                I am a student at Georgia Tech Bootcamp and have just started my journey to become a Web Developer. Even I am just at the entry-level of a web developer, I always like to challenge myself and work on unfamiliar projects. I have experience and been known for working well in both group and solo projects.
                 <br></br>
 
-                I will post all of my project in this page. Don't hesitate to reach out to me if you think I am a
-                potential candiate.
+                I will post all of my projects on this page. Don't hesitate to reach out to me if you think I am a potential candidate.
             </p>
         </article>
         <section id="my-project" class="work">
@@ -62,11 +59,9 @@
                 </span>
             </div>
             <div id="card-2" class="card">
-                <a href="https://roseluu.github.io/prework-about-me/" alt="Pre-work about me" target='_blank'>
-                </a>
                 <span id="small-explain">
-                    <h4>Pre-work about me</h4>
-                    <p class="lower-text">HTML/CSS</p>
+                    <h4>OOP-Team Profile Generator</h4>
+                    <p class="lower-text">Back-end: Test with Jest/Node.js/Inquirer/Bootstrap</p>
                 </span>
             </div>
             <div id='card-3' class="card">
@@ -77,14 +72,14 @@
             </div>
             <div id='card-4' class="card">
                 <span id="small-explain">
-                    <h4>Weather Dashboard</h4>
-                    <p class="lower-text">API/JavaScripts</p>
+                    <h4>Homeschool Hookup</h4>
+                    <p class="lower-text">Node.js/Express/Sequelize/MySQL2</p>
                 </span>
             </div>
             <div id='card-5' class="card">
                 <span id="small-explain">
-                    <h4>Password Generator</h4>
-                    <p class="lower-text">JavaScript</p>
+                    <h4>Node Taker</h4>
+                    <p class="lower-text">Node.js/Express/UUID</p>
                 </span>
             </div>
             <div id='card-6' class="card">
@@ -98,13 +93,12 @@
     <footer id="contact" class="my-contact">
         <h3>Contact Me</h3>
         <div class="footer-contact">
-            <a href="https://roseluu.github.io/prework-about-me/" alt="website" class="website">roseluu@website.com</a>
-            <a href="https://www.linkedin.com/in/rose-luu-b1445a21a/" class="linkedin"> Linkedin</a>
-            <a href="https://github.com/RoseLuu" class="github"> Github</a>
-            <a href="https://mail.google.com/mail/u/0/?tab=im#inbox" class="gmail">luuhongnhung10@gmail.com</a>
+        <span class ='icon' id='website'></span>
+        <span class ='icon' id='linkedin'></span>
+        <span class ='icon' id='github'></span>
+        <span class ='icon' id='mail'></span>
         </div>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -119,19 +113,31 @@
             location.href = "https://urbaned0ge.github.io/Musical-Time-Machine/"
         }
         document.getElementById("card-2").onclick = function () {
-            location.href = "https://roseluu.github.io/prework-about-me/"
+            location.href = "https://github.com/RoseLuu/roseluu-Object-Oriented-Programming-Team-Profile-Generator"
         }
         document.getElementById("card-3").onclick = function () {
             location.href = "https://roseluu.github.io/roseluu-homework4-WebAPIsCodeQuiz/"
         }
         document.getElementById("card-4").onclick = function () {
-            location.href = "https://roseluu.github.io/roseluu-homework6-ServerSideAPIsWeatherDashboard/"
+            location.href = "https://spooky-castle-63582.herokuapp.com/"
         }
         document.getElementById("card-5").onclick = function () {
-            location.href = "https://roseluu.github.io/roseluu-PasswordGenerator/"
+            location.href = "https://dry-meadow-47853.herokuapp.com/"
         }
         document.getElementById("card-6").onclick = function () {
             location.href = "https://roseluu.github.io/roseluu-homework5-ThirdPartyAPIs-WorkDayScheduler/"
+        }
+        document.getElementById('website').onclick =function(){
+            location.href ='https://roseluu.github.io/prework-about-me/'
+        }
+        document.getElementById('linkedin').onclick =function(){
+            location.href ='https://www.linkedin.com/in/rose-luu-b1445a21a/'
+        }
+        document.getElementById('github').onclick =function(){
+            location.href ='https://github.com/RoseLuu"'
+        }
+        document.getElementById('mail').onclick =function(){
+            location.href ='https://mail.google.com/mail/u/0/?tab=im#inbox'
         }
     </script>
 </body>
