--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             location.href ='https://www.linkedin.com/in/rose-luu-b1445a21a/'
         }
         document.getElementById('github').onclick =function(){
-            location.href ='https://github.com/RoseLuu"'
+            location.href ='https://github.com/RoseLuu'
         }
         document.getElementById('mail').onclick =function(){
             location.href ='https://mail.google.com/mail/u/0/?tab=im#inbox'
